Fix dark theme; allow settings anytime on study

--- a/src/styl/analyse.styl
+++ b/src/styl/analyse.styl
@@ -61,7 +61,7 @@
       top 3px
       right 0
       line-height inherit
-      background blue
+      background darken(gold, 25%)
       color #fff
       border 0
       border-radius 3px
@@ -277,6 +277,11 @@ comment
     height 100%
 
 .view-container.light
+  .tabs-navigation.analyse
+    > .tab-button
+      > .chip
+        background blue
+
   .analyse-fixedBar
     background-color bglight
 
