Study infinite scroll

--- a/src/styl/colors.styl
+++ b/src/styl/colors.styl
@@ -37,6 +37,7 @@ borderColor = lighten(bgdark, 8%)
 // light theme
 themeBgLight = #f1f1f1
 themeBgLightActive = #e6e6e6
+bglightEven = darken(themeBgLight, 2%)
 
 // transp colors
 transpBlack08 = rgba(0,0,0,0.8)
