Add like action

--- a/src/ui/study/study.styl
+++ b/src/ui/study/study.styl
@@ -140,6 +140,9 @@
       font-size 1.1em
       line-height 1.1em
     > h3
+      white-space nowrap
+      overflow hidden
+      text-overflow ellipsis
       font-size 0.85em
 
 .study-pagerItemBody
@@ -175,9 +178,9 @@
 .study-pagerSelect
   width 100%
   outline none
-  border 1px solid #323232
+  border 0
   background transparent
-  height 36px
+  height 40px
   font-size 0.9em
 
 .view-container.light
