--- a/src/styl/analyse.styl
+++ b/src/styl/analyse.styl
@@ -59,7 +59,7 @@
       width 12px
       font-size 10px
       top 3px
-      right 0
+      right 1px
       line-height inherit
       background darken(gold, 25%)
       color #fff
