Study list transp theme

--- a/src/ui/study/study.styl
+++ b/src/ui/study/study.styl
@@ -248,3 +248,13 @@
   .study-tag
     &:nth-child(even)
       background-color transpWhite01
+  .study-pagerSubHeader
+    background transpBlack06
+  .study-pagerItem.even
+    background-color transpWhite005
+  .study-pagerSearchWrapper
+    > .inputWrapper > input
+      background-color transpWhite01
+    > button
+      background transpBlack06
+      box-shadow transpShadow
