--- a/src/ui/study/study.styl
+++ b/src/ui/study/study.styl
@@ -220,7 +220,7 @@
   > button
     height 36px
     flex 0 0 60px
-    padding-right 0
+    padding 0
     background linear-gradient(to bottom,rgba(40,40,40,1),rgba(34,34,34,1) 100%)
     text-shadow 0 1px 0 #000
     color #8a8a8a
