No blue in transp theme

--- a/src/ui/study/study.styl
+++ b/src/ui/study/study.styl
@@ -258,3 +258,9 @@
     > button
       background transpBlack06
       box-shadow transpShadow
+  .study-pagerItemTitle
+    > i
+    color inherit
+    > div > h2
+      color inherit
+      font-weight bold
