Side menu perf tweaks

--- a/src/styl/common.styl
+++ b/src/styl/common.styl
@@ -191,9 +191,7 @@ span.fa
 .withIcon
   &[data-icon]:before
     margin-right 3px
-    position relative
-  &[data-icon]:before
-    top 2px
+    vertical-align middle
 
 .contentTitle
   text-align left
