--- a/src/ui/menu/menuView.styl
+++ b/src/ui/menu/menuView.styl
@@ -28,7 +28,7 @@
     width 35%
   overflow hidden
   z-index 100
-  box-shadow: 2px 0px 3px rgba(0, 0, 0, 0.3)
+  // box-shadow: 2px 0px 3px rgba(0, 0, 0, 0.3)
   transform translate3d(-100%, 0,0)
   section
     padding 0 15px
@@ -70,7 +70,6 @@
     display flex
     width 100%
     justify-content flex-start
-    position relative
     padding-left 15px
 
 .menu-toggleButton
