--- a/src/ui/menu/menuView.styl
+++ b/src/ui/menu/menuView.styl
@@ -10,7 +10,7 @@
   left 0
 
 #side_menu
-  background #222
+  background #3f3f3f
   color #DFDFDF
   position absolute
   visibility hidden
@@ -28,7 +28,6 @@
     width 35%
   overflow hidden
   z-index 100
-  // box-shadow: 2px 0px 3px rgba(0, 0, 0, 0.3)
   transform translate3d(-100%, 0,0)
   section
     padding 0 15px
@@ -42,19 +41,22 @@
   width: 60%;
   padding: 0.8em 0.25em;
   margin: 15px auto
-  border: 1px solid #323232;
-  background: #111
+  border: 1px solid #505050
+  background: #2e2e2e
   font-weight: bold;
   border-radius: 2px;
 
 .side_menu_header
+  flex 0 0 auto
   display flex
   flex-flow column nowrap
   justify-content center
-  background #1a1a1a
+  background #373737
   color darken(#fff, 8%)
-  padding 1em 0
+  padding-top 15px
   min-height 65px
+  > div:last-child
+    padding-bottom 15px
   > .kiddo
     display flex
     justify-content center
@@ -72,33 +74,32 @@
     justify-content flex-start
     padding-left 15px
 
+.side_menu_scroller
+  flex 0 1 auto
+
 .menu-toggleButton
-  background #282828
+  background #373737
   text-align left
   padding-left 15px
   line-height 40px
-  &.side_link
-    margin-top 0
+  &.side_link:last-child
+    margin 0
   &.active
-    background lighten(#353535, 8%)
+    background lighten(#373737, 3%)
 
-.pingServerLed
+.pingServer
   margin-left 15px
-  margin-right 50px
-  > .pingServer
-    display flex
-    align-items center
-    color darken(#fff, 40%)
-    white-space nowrap
-    font-size 0.75em
-    text-align left
-    > signal
-      margin-right 1em
-    .pingKey
-      display inline-block
-      width 45px
-    .pingValue
-      font-family Cousine
+  display flex
+  align-items center
+  color darken(#fff, 40%)
+  font-size 0.75em
+  > signal
+    margin-right 1em
+  .pingKey
+    display inline-block
+    width 45px
+  .pingValue
+    font-family Cousine
 
 .side_links
   > .hr
@@ -107,10 +108,8 @@
 
 .side_link
   color #bbb
-  padding 10px 0 10px 15px
-  margin 5px 0
+  padding 15px 0 15px 15px
   font-weight bold
-  font-size 0.9em
   line-height 19px
   > span
     color darken(textLightGray, 15%)
@@ -124,15 +123,10 @@
       width 18px
       height 18px
       background url('../../images/icons/game_icon_menu.svg') no-repeat
-  > .highlight
-    color gold
-    font-weight bold
-  &.emptyIcon
-    padding-left 49px
   &:last-child
     margin-bottom 10px
   &.active
-    background lighten(#222, 5%)
+    background lighten(#3f3f3f, 3%)
 
 .sep_link
   color #8a8a8a
