--- a/src/styl/colors.styl
+++ b/src/styl/colors.styl
@@ -1,5 +1,6 @@
 // base colors
 gold = #C4A86F
+goldDark = darken(gold, 10%)
 orange = #d85000
 orangeDark = rgb(255, 119, 41)
 green = #759900
@@ -37,6 +38,7 @@ borderColor = lighten(bgdark, 8%)
 // light theme
 themeBgLight = #f1f1f1
 themeBgLightActive = #e6e6e6
+themeBgLightBorder = darken(themeBgLight, 5%)
 bglightEven = darken(themeBgLight, 2%)
 
 // transp colors
