--- a/src/ui/menu/menuView.styl
+++ b/src/ui/menu/menuView.styl
@@ -6,6 +6,7 @@
   opacity 0
   visibility hidden
   position absolute
+  will-change opacity
   top 0
   left 0
 
@@ -27,6 +28,7 @@
   @media only screen and (min-width 960px)
     width 35%
   overflow hidden
+  will-change transform
   z-index 100
   transform translate3d(-100%, 0,0)
   section
