--- a/src/ui/study/study.styl
+++ b/src/ui/study/study.styl
@@ -18,7 +18,6 @@
     width 35%
   overflow hidden
   z-index 100
-  box-shadow: -2px 0px 3px rgba(0, 0, 0, 0.3)
   transform translate3d(100%, 0,0)
   section
     padding 0 15px
@@ -93,6 +92,7 @@
   display flex
   flex-flow row nowrap
   align-items center
+  position relative
 
 .study-pagerScroller
   flex 1 1 auto
@@ -240,7 +240,7 @@
   .study-pagerItem.even
     background-color bglightEven
   .study-pagerSubHeader
-    color headerBgDarkColor
+    background-color themeBgLight
 
 
 .view-container.transp
