Tweak menu links

--- a/src/ui/menu/menuView.styl
+++ b/src/ui/menu/menuView.styl
@@ -111,8 +111,8 @@
 .side_link
   color #bbb
   padding 15px 0 15px 15px
-  font-weight bold
   line-height 19px
+  letter-spacing -0.5px
   > span
     color darken(textLightGray, 15%)
     width 17px
