--- a/src/styl/games-menu.styl
+++ b/src/styl/games-menu.styl
@@ -2,8 +2,6 @@
   background rgba(21,26,30,0.8)
 
 #wrapper_games
-  position absolute
-  top 13%
   width 100%
   z-index 12
   @media only screen and (min-width 600px)
@@ -24,24 +22,14 @@
     left calc((100% - 720px) / 2)
     right calc((100% - 720px) / 2)
 
-#all_games
-  height 100%
-  position relative
-  @media only screen and (min-width 600px)
-    background bglight
-    height 100%
-    display flex
-    flex-flow row wrap
-    overflow-y auto
-    -webkit-overflow-scrolling: touch;
-    padding-left 5px
-    border-radius 0 0 5px 5px
-
 .wrapper_overlay_close
   position absolute
   width 100%
   height 100%
   z-index 10
+
+.games_carousel
+  margin-left 5vw
 
 .card
   background #2a2a2a
@@ -49,6 +37,10 @@
   float left
   border-radius 5px
   box-shadow 0 2px 3px 0 rgba(0,0,0,0.5)
+  width 90vw
+  height calc(90vw + 145px)
+  > .boardWrapper
+    height 90vw
   .infos
     text-align center
     text-transform uppercase
