Many style and perf improvements

--- a/src/styl/light_theme.styl
+++ b/src/styl/light_theme.styl
@@ -5,6 +5,9 @@
   .main_header
     color textLightBg
     background-color themeBgLight
+    border-bottom 1px solid borderLightGray
+    &.board
+      border-bottom none
 
   .main_header_button
     &.active
