--- a/src/styl/tabs.styl
+++ b/src/styl/tabs.styl
@@ -52,6 +52,9 @@
 
 
 .view-container.light
+  .tabs-nav-header
+    border-bottom 1px solid borderLightGray
+    margin-top -1px
   .tabs-navigation
     background-color themeBgLight
   .tab-button
