--- a/src/styl/user.styl
+++ b/src/styl/user.styl
@@ -352,6 +352,13 @@ td.variantPerfMemo
   padding 0
   font-size 1.5em
 
+.view-container.light
+  .select_games_filter
+    background-color themeBgLight
+    border-bottom 1px solid borderLightGray
+    > select
+      color textLightBg
+
 .view-container.transp
   .userGame
     background transpBlack02
