--- a/src/ui/study/study.styl
+++ b/src/ui/study/study.styl
@@ -240,7 +240,14 @@
   .study-pagerItem.even
     background-color bglightEven
   .study-pagerSubHeader
+    margin-top -1px
     background-color themeBgLight
+  .study-pagerSearchWrapper
+    > .inputWrapper > input
+      background-color darken(themeBgLight, 3%)
+    > button
+      background: linear-gradient(to bottom,rgba(245,245,245,1) 0%,rgba(240,240,240,1) 100%);
+      text-shadow none
 
 
 .view-container.transp
