--- a/src/styl/colors.styl
+++ b/src/styl/colors.styl
@@ -36,7 +36,8 @@ headerBgDarkActive = lighten(headerBgDark, 8%)
 borderColor = lighten(bgdark, 8%)
 
 // light theme
-themeBgLight = #f1f1f1
+themeBgLight = #f6f6f6
+themeBgLightHeader = #f1f1f1
 themeBgLightActive = #e6e6e6
 themeBgLightBorder = darken(themeBgLight, 5%)
 bglightEven = darken(themeBgLight, 2%)
