--- a/src/styl/main.styl
+++ b/src/styl/main.styl
@@ -49,6 +49,9 @@ main
         > .chip
           right 5px
 
+.subHeader
+  background headerBgDark
+
 .main_header-selector
   width 100%
   height 25px
@@ -76,10 +79,10 @@ main
   position: absolute;
   left: 0;
   right: 0;
-  bottom -2px
-  height: 2px;
-  z-index: 1;
-  box-shadow inset 0px 1px 4px -1px rgba(0, 0, 0, 0.3)
+  bottom -1px
+  height: 3px
+  z-index: 1
+  box-shadow 0px 2px 3px -1px rgba(0,0,0,0.3)
 
 .main_header_title
   display flex
