--- a/src/styl/light_theme.styl
+++ b/src/styl/light_theme.styl
@@ -5,14 +5,14 @@
   .main_header
     color textLightBg
     background-color themeBgLightHeader
-    border-bottom 1px solid borderLightGray
+    border-bottom 1px solid darken(themeBgLightHeader, 5%)
     &.board
       border-bottom none
 
   .subHeader
     margin-top -1px
     background-color themeBgLightHeader
-    border-bottom 1px solid borderLightGray
+    border-bottom 1px solid darken(themeBgLightHeader, 5%)
 
   .main_header_button
     &.active
