Darker menu color

--- a/src/ui/menu/menuView.styl
+++ b/src/ui/menu/menuView.styl
@@ -11,7 +11,7 @@
   left 0
 
 #side_menu
-  background #3f3f3f
+  background #373737
   color #DFDFDF
   position absolute
   visibility hidden
@@ -53,7 +53,7 @@
   display flex
   flex-flow column nowrap
   justify-content center
-  background #373737
+  background #2e2e2e
   color darken(#fff, 8%)
   padding-top 15px
   min-height 65px
@@ -80,14 +80,14 @@
   flex 0 1 auto
 
 .menu-toggleButton
-  background #373737
+  background #2e2e2e
   text-align left
   padding-left 15px
   line-height 40px
   &.side_link:last-child
     margin 0
   &.active
-    background lighten(#373737, 3%)
+    background lighten(#2e2e2e, 3%)
 
 .pingServer
   margin-left 15px
@@ -128,7 +128,7 @@
   &:last-child
     margin-bottom 10px
   &.active
-    background lighten(#3f3f3f, 3%)
+    background lighten(#373737, 3%)
 
 .sep_link
   color #8a8a8a
