Study move list font adjustment

--- a/src/styl/analyse.styl
+++ b/src/styl/analyse.styl
@@ -132,7 +132,7 @@
 .analyse-replay
   flex 1 1 auto
   position relative
-  font-size 1rem
+  font-size 0.93rem
   white-space normal
   line-height 1.05em
   &.displayPieces
@@ -162,6 +162,7 @@
 index
   color rgba(textDarkBg, 50%)
   margin-right 0.2em
+  font-weight normal
 
 move
   display inline-block
