WIP on playban message

--- a/src/styl/home.styl
+++ b/src/styl/home.styl
@@ -115,6 +115,19 @@
         justify-content center
         align-items center
 
+.home-playbanInfo
+  padding 1em
+  text-align center
+  > h2
+    font-size 1.2em
+    margin-top 0.5em
+    line-height 2em
+  > p
+    font-size 0.9em
+  > ul
+    list-style initial
+    margin-left 2em
+    text-align left
 
 
 .view-container.light
