Use puzzle server rating, rename stuff

--- a/src/styl/training.styl
+++ b/src/styl/training.styl
@@ -187,6 +187,10 @@
   .training-control
     &.retry
       color textLightBg
+  .training-vote
+    > .buttons
+      > span
+        color inherit
 
 
 .view-container.transp
