Implement two-factor authentication (closes #826)

--- a/src/styl/login.styl
+++ b/src/styl/login.styl
@@ -25,6 +25,11 @@ form.login
       font-size 1.2em
       vertical-align middle
       margin-right 3px
+  .twofactorhelp
+    width 80%
+    padding 0 15px
+    margin 2em auto
+    font-size 0.8em
 
 .signup
   margin-top 40px
