Ensure numeric keyboard

--- a/src/styl/login.styl
+++ b/src/styl/login.styl
@@ -30,6 +30,8 @@ form.login
     padding 0 15px
     margin 2em auto
     font-size 0.8em
+    > i
+      font-size 1.5em
 
 .signup
   margin-top 40px
