--- a/src/styl/colors.styl
+++ b/src/styl/colors.styl
@@ -4,6 +4,7 @@ goldDark = darken(gold, 10%)
 orange = #d85000
 orangeDark = rgb(255, 119, 41)
 green = #759900
+green2 = #639B24
 paleGreen = rgba(117,153,0,0.7)
 red = #ac524f
 blue = #3b93da
