--- a/src/ui/analyse/ceval/cevalView.styl
+++ b/src/ui/analyse/ceval/cevalView.styl
@@ -26,7 +26,7 @@
   height 25px
   line-height 25px
   text-align center
-  background darken(headerBgDark, 15%)
+  border-right 1px solid borderColor
   > .spinner
     width initial
     height initial
@@ -85,6 +85,9 @@
 
   .ceval-Wrapper strong
     color inherit
+
+  .ceval-curEval
+    border-right-color borderLightGray
 
 .view-container.transp
   .ceval-pv.even
