Study links fixes

--- a/src/styl/analyse.styl
+++ b/src/styl/analyse.styl
@@ -56,11 +56,12 @@
     height 25px
     > .chip
       height 11px
-      width 12px
-      font-size 10px
+      width 11px
+      line-height 11px
+      font-size 9px
+      text-align center
       top 3px
       right 1px
-      line-height inherit
       background darken(gold, 25%)
       color #fff
       border 0
