--- a/src/ui/study/study.styl
+++ b/src/ui/study/study.styl
@@ -283,6 +283,8 @@
     > button
       background: linear-gradient(to bottom,rgba(245,245,245,1) 0%,rgba(240,240,240,1) 100%);
       text-shadow none
+  .study-pagerToggleSearch.active
+    background-color themeBgLightActive
 
 
 .view-container.transp
