--- a/src/styl/common.styl
+++ b/src/styl/common.styl
@@ -359,6 +359,22 @@ span.fa
     border-color bgdark
     right 6px
 
+.chip
+  font-family 'Noto Sans', sans-serif
+  position absolute
+  font-size 9px
+  font-weight bold
+  line-height 13px
+  letter-spacing 0px
+  color headerBgDark
+  border 3px solid headerBgDark
+  border-radius 50%
+  height 19px
+  width 19px
+  top 5px
+  right 5px
+  background gold
+
 .action_create_button
   flex 1 1 25%
   text-align right
