--- a/src/styl/game.styl
+++ b/src/styl/game.styl
@@ -335,29 +335,30 @@
   border-radius 5px
   > p
     margin-bottom: 10px;
+    text-align center
   > .negotiationButtons
     height 50px
     display flex
     align-items center
     justify-content space-around
     > button
-      flex: 0 0 50px;
+      flex: 0 0 80px;
       height: 50px;
       line-height: 44px;
       font-size: 25px;
       background: #fff;
       padding 0
+      border-radius 4px
       &.accept
-        color: green
-        margin-right 10px
+        background green
+        color #fff
         &.active
-          background green
-          color #fff
+          background lighten(green, 10%)
       &.decline
-        color: red
+        background red
+        color #fff
         &.active
-          background red
-          color #fff
+          background lighten(red, 10%)
 
 .player_controls, .offline_actions, .playersTable
   .result
