--- a/src/styl/analyse.styl
+++ b/src/styl/analyse.styl
@@ -91,6 +91,8 @@
       width 100%
     @media only screen and (orientation: landscape)
       width 'calc(100vw - 100vh + %s)' % headerHeight
+    @media only screen and (orientation: landscape) and (aspect-ratio 4/3), (orientation: landscape) and (device-aspect-ratio 4/3), (orientation landscape) and (device-aspect-ratio 3/4)
+      width 'calc(100vw - 88vh + %s)' % headerHeight
 
 .analyse_actions_bar
   flex 0 0 40px
