Fix tournament player length

--- a/src/styl/tournament.styl
+++ b/src/styl/tournament.styl
@@ -65,9 +65,9 @@
     flex 0 0 20%
     text-align right
   > .tournamentPlayer
-    flex 0 1 auto
+    flex-grow 1
     text-overflow: ellipsis
-    white-space: nowrap;
+    white-space: nowrap
     overflow hidden
 
 .list_item.tournament-me
