Allow users to name their tournaments

--- a/src/styl/tournament.styl
+++ b/src/styl/tournament.styl
@@ -291,8 +291,11 @@
       &.notVisible
         visibility hidden
         position absolute
-      .passwordField
-        width 50%
+      .textField
+        width 60%
+    >.tournament_name_warning
+      font-size .75em
+      margin-top 5px
 
 .tournament_form_popup
   background bglight
