Refactor to have reusable prompt

--- a/src/styl/common.styl
+++ b/src/styl/common.styl
@@ -422,10 +422,10 @@ signal > i.off
   .fa
     margin-right 0
 
-#webviewPrompt
+.system_prompt
   .popup_content
     padding 1em
-  .okBtn
+  .buttons
     display flex
     justify-content center
     align-items center
