Add Leipzig pieces to config, styles, copying

--- a/src/styl/chessground-piece.styl
+++ b/src/styl/chessground-piece.styl
@@ -201,6 +201,39 @@
     &.black
       background-image url('../../images/pieces/reilly/bK.svg')
 
+/* leipzig */
+.leipzig piece
+  &.pawn
+    &.white
+      background-image url('../../images/pieces/leipzig/wP.svg')
+    &.black
+      background-image url('../../images/pieces/leipzig/bP.svg')
+  &.bishop
+    &.white
+      background-image url('../../images/pieces/leipzig/wB.svg')
+    &.black
+      background-image url('../../images/pieces/leipzig/bB.svg')
+  &.knight
+    &.white
+      background-image url('../../images/pieces/leipzig/wN.svg')
+    &.black
+      background-image url('../../images/pieces/leipzig/bN.svg')
+  &.rook
+    &.white
+      background-image url('../../images/pieces/leipzig/wR.svg')
+    &.black
+      background-image url('../../images/pieces/leipzig/bR.svg')
+  &.queen
+    &.white
+      background-image url('../../images/pieces/leipzig/wQ.svg')
+    &.black
+      background-image url('../../images/pieces/leipzig/bQ.svg')
+  &.king
+    &.white
+      background-image url('../../images/pieces/leipzig/wK.svg')
+    &.black
+      background-image url('../../images/pieces/leipzig/bK.svg')
+
 /* fantasy */
 .fantasy piece
   &.pawn
