--- a/src/styl/settings.styl
+++ b/src/styl/settings.styl
@@ -163,6 +163,11 @@
       background-image url('../../images/pieces/companion/wN.svg')
       @media only screen and (min-width 600px)
         background-image url('../../images/pieces/companion/wP.svg'),url('../../images/pieces/companion/wN.svg'),url('../../images/pieces/companion/wB.svg'),url('../../images/pieces/companion/wR.svg'),url('../../images/pieces/companion/wQ.svg'),url('../../images/pieces/companion/wK.svg')
+  &.leipzig
+    > label
+      background-image url('../../images/pieces/leipzig/wN.svg')
+      @media only screen and (min-width 600px)
+        background-image url('../../images/pieces/leipzig/wP.svg'),url('../../images/pieces/leipzig/wN.svg'),url('../../images/pieces/leipzig/wB.svg'),url('../../images/pieces/leipzig/wR.svg'),url('../../images/pieces/leipzig/wQ.svg'),url('../../images/pieces/leipzig/wK.svg')
   &.fantasy
     > label
       background-image url('../../images/pieces/fantasy/wN.svg')
