Chrome 72 flex bug workaround

--- a/src/styl/board-content.styl
+++ b/src/styl/board-content.styl
@@ -2,6 +2,7 @@
   flex 1 1 auto
   display flex
   flex-flow column nowrap
+  min-height 0 // fix chrome 72 bug
   @media only screen and (orientation: landscape)
     display flex
     flex-flow row nowrap
