--- a/src/styl/board-content.styl
+++ b/src/styl/board-content.styl
@@ -2,7 +2,7 @@
   flex 1 1 auto
   display flex
   flex-flow column nowrap
-  min-height 0 // fix chrome 72 bug
+  min-height 0 // fix chrome bug
   @media only screen and (orientation: landscape)
     display flex
     flex-flow row nowrap
