--- a/src/styl/user.styl
+++ b/src/styl/user.styl
@@ -107,6 +107,7 @@ h3.fullname
   flex 1 1 auto
   display flex
   flex-flow column nowrap
+  min-height 0 // chrome 73 regression
 
 .select_games_filter
   flex 0 0 40px
