--- a/src/styl/tabs.styl
+++ b/src/styl/tabs.styl
@@ -34,6 +34,11 @@
 
 
 // tab content
+.tabs-view-wrapper
+  overflow-x hidden // now needed by chrome 73
+  flex 1 1 auto
+  display flex
+
 .tabs-view
   flex 1 1 auto
   display flex
