Fix chrome regression on study page

--- a/src/ui/study/study.styl
+++ b/src/ui/study/study.styl
@@ -88,6 +88,7 @@
   flex 1 1 auto
   display flex
   flex-flow column nowrap
+  min-height 0 // chrome 73 regression
 
 .study-pagerSubHeader
   flex 0 0 40px
