added kosal pieces

--- a/src/styl/chessground-piece.styl
+++ b/src/styl/chessground-piece.styl
@@ -201,6 +201,39 @@
     &.black
       background-image url('../../images/pieces/reilly/bK.svg')
 
+/* Kosal */
+.kosal piece
+  &.pawn
+    &.white
+      background-image url('../../images/pieces/kosal/wP.svg')
+    &.black
+      background-image url('../../images/pieces/kosal/bP.svg')
+  &.bishop
+    &.white
+      background-image url('../../images/pieces/kosal/wB.svg')
+    &.black
+      background-image url('../../images/pieces/kosal/bB.svg')
+  &.knight
+    &.white
+      background-image url('../../images/pieces/kosal/wN.svg')
+    &.black
+      background-image url('../../images/pieces/kosal/bN.svg')
+  &.rook
+    &.white
+      background-image url('../../images/pieces/kosal/wR.svg')
+    &.black
+      background-image url('../../images/pieces/kosal/bR.svg')
+  &.queen
+    &.white
+      background-image url('../../images/pieces/kosal/wQ.svg')
+    &.black
+      background-image url('../../images/pieces/kosal/bQ.svg')
+  &.king
+    &.white
+      background-image url('../../images/pieces/kosal/wK.svg')
+    &.black
+      background-image url('../../images/pieces/kosal/bK.svg')
+
 /* leipzig */
 .leipzig piece
   &.pawn
