--- a/src/styl/settings.styl
+++ b/src/styl/settings.styl
@@ -163,6 +163,11 @@
       background-image url('../../images/pieces/companion/wN.svg')
       @media only screen and (min-width 600px)
         background-image url('../../images/pieces/companion/wP.svg'),url('../../images/pieces/companion/wN.svg'),url('../../images/pieces/companion/wB.svg'),url('../../images/pieces/companion/wR.svg'),url('../../images/pieces/companion/wQ.svg'),url('../../images/pieces/companion/wK.svg')
+  &.kosal
+    > label
+      background-image url('../../images/pieces/kosal/wN.svg')
+      @media only screen and (min-width 600px)
+        background-image url('../../images/pieces/kosal/wP.svg'),url('../../images/pieces/kosal/wN.svg'),url('../../images/pieces/kosal/wB.svg'),url('../../images/pieces/kosal/wR.svg'),url('../../images/pieces/kosal/wQ.svg'),url('../../images/pieces/kosal/wK.svg')
   &.leipzig
     > label
       background-image url('../../images/pieces/leipzig/wN.svg')
